# cloth

./: '  CMakeLists.txt  camera.h  cloth_handler.cpp  cloth_handler.h  cloth_renderer.cpp  cloth_renderer.h  cloth_vertex.cpp  cloth_vertex.h  collision_handler.cpp  collision_handler.h  compute_shader.h  global.cpp  global.h  main.cpp  readme.md  sphere.cpp  sphere.h  spring.cpp  spring.h
.cache/clangd/index/: camera.h.C0AE414D838E2D82.idx  cloth_handler.cpp.3536D3E2A62678ED.idx  cloth_handler.h.0517C02E146367A7.idx  cloth_renderer.cpp.5A57E203DF8AFBF9.idx  cloth_renderer.h.770A373177C8AA99.idx  cloth_vertex.cpp.077E86372DC52372.idx  cloth_vertex.h.19414A2DD53B5BD7.idx  collision_handler.cpp.A1E0B3D5A2776ED8.idx  collision_handler.h.E3F90745D0648D3A.idx  compute_shader.h.7E2B948F1C8C1EB1.idx  glad.c.51E8B530D8DFBD13.idx  glad.c.9F7F61AD7AC79C66.idx  glad.h.B5492EE9C401E027.idx  glad.h.D41D95AB6EF3F942.idx  global.cpp.BA44947973CA1FBE.idx  global.h.0FAD78FC17BCAC39.idx  main.cpp.3F34678648C5CF00.idx  shader.h.B4A657CC2494E5B7.idx  sphere.cpp.D6585E135153A0ED.idx  sphere.h.D4B78CCAE6A781F7.idx  spring.cpp.7CFD08FEB5A17497.idx  spring.h.B658EBE0D8A0CFC5.idx
include/: glad.c
shaders/: c_test.glsl  f_cloth.glsl  f_cloth_vertex.glsl  f_sphere.glsl  f_spring.glsl  v_cloth.glsl  v_cloth_vertex.glsl
